# Projeto_livraria

./: .env  .env_exemplo  .gitignore  README.md  db.sqlite3  livraria.json  livraria_bkp.json  package-lock.json  pyproject.toml  requirements.txt
config/: settings.py  urls.py
livraria/: admin.py  models.py  serializers.py  views.py
livraria/migrations/: 0001_initial.py  0002_editora.py  0002_livro_capa.py  0003_autor_livro.py  0003_compra.py  0004_itenscompra.py  0004_livro_autores.py  0005_compra_preco.py  0006_remove_compra_preco.py  0007_itenscompra_preco_item.py  0008_compra_tipo_pagamento.py
livraria/models/: compra.py  livro.py
livraria/serializers/: compra.py  livro.py
livraria/views/: autor.py  categoria.py  compra.py  editora.py  livro.py
uploader/migrations/: 0001_initial.py
usuario/: admin.py  models.py  serializers.py
usuario/migrations/: 0001_initial.py  0002_usuario_foto.py
